Fix broken layout when content is long in ModifyProfile dialog

--- a/app/components/dialog/components/modifyProfile/modifyProfile.scss
+++ b/app/components/dialog/components/modifyProfile/modifyProfile.scss
@@ -5,7 +5,7 @@
   height: 533px;
   border-radius: 5px;
   box-shadow: 0 2px 4px 0 rgba(12, 0, 51, 0.1);
-  padding: 0 16px;
+  padding: 0 16px 16px 16px;
 }
 
 .dialogHeader {
@@ -48,7 +48,7 @@
 }
 
 .contentSection {
-  height: 314px;
+  min-height: 314px;
   margin: 24px 0;
 
   .formControl {
@@ -77,6 +77,7 @@
 
 .footer {
   position: relative;
+  height: 40px;
 }
 
 .buttonsWrapper {
